--- a/python-proctor-service/.env
+++ b/python-proctor-service/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://examuser:haricharan2005@examproctor.atj6b8n.mongodb.net/exam_proctoring?retryWrites=true&w=majority
-PORT=5000
+PORT=10000
 FLASK_ENV=production
+BACKEND_URL=https://exam-proctor-backend-jxrb.onrender.com
