--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,17 @@
-PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/exam_proctor
-NODE_PORT=5000
-PYTHON_PROCTOR_URL=http://localhost:5001
+# Server Configuration
+PORT=10000
+NODE_ENV=production
+
+# MongoDB Atlas (Production)
+MONGODB_URI=mongodb+srv://examuser:Haricharan2005@examproctor.atj6b8n.mongodb.net/exam_proctoring?retryWrites=true&w=majority
+
+# Python AI Proctor Service
+PYTHON_PROCTOR_URL=https://exam-proctor-ai.onrender.com
+
+# JWT Configuration
 JWT_SECRET=your_super_secret_key_change_this_123456789
 JWT_EXPIRE=7d
 
-# Judge0 API
+# Judge0 Code Execution API
 JUDGE0_API_KEY=8430d1babemshe43da78620dfc53p1b6e8ejsn20f032f52c8d
 JUDGE0_HOST=judge0-ce.p.rapidapi.com
-
