password change of baceknd URI

--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=10000
 NODE_ENV=production
 
 # MongoDB Atlas (Production)
-MONGODB_URI=mongodb+srv://examuser:Haricharan2005@examproctor.atj6b8n.mongodb.net/exam_proctoring?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://examuser:haricharan2005@examproctor.atj6b8n.mongodb.net/exam_proctoring?retryWrites=true&w=majority
 
 # Python AI Proctor Service
 PYTHON_PROCTOR_URL=https://exam-proctor-ai.onrender.com
